2009-05-11  John W. Eaton  <jwe@octave.org>

	* sparse-xdiv.cc (do_rightdiv_sm_dm, do_leftdiv_dm_sm):
	Avoid apparent MSVC bug with typedef.

	* Makefile.in (install-lib): Remove
	$(DESTDIR)$(octlibdir)/$(SHLLIBPRE)octinterp.$(SHLLIB_VER), not
	$(DESTDIR)$(octlibdir)/$(SHLPRE)octinterp.$(SHLEXT_VER).

2009-05-08  Carsten Clark <tantumquantum+gnuoctave@gmail.com>

	* data.cc (Fissorted): Fix typo in documentation entry.

2009-05-07  Robert T. Short  <octave@phaselockedsystems.com>

	* ov-class.h, ov-class.cc (octave_class::reconstruct_exemplar):
	New function.
	* ov-class.cc (octave_class::load_binary, octave_class::load_hdf5,
	octave_class::load_ascii): Construct exemplar table and ensure
	inheritance is correct.
        * ov-struct.cc (struct): Return struct from object.

2009-05-07  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (base_graphics_object::set): Undo previous change.
	(base_properties::set (const caseless_str&, const octave_value&):
	New virtual function.
	(base_properties::set (const caseless_str&, const std::string&,
	const octave_value&)): No longer virtual.

	* toplev.cc (octave_config_info): Remove F2C and F2CFLAGS from the
	config infor struct.
	* oct-conf.h.in (OCTAVE_CONF_F2CFLAGS, OCTAVE_CONF_F2C):
	Delete definitions.

2009-05-07  Marco Atzeri  <marco_atzeri@yahoo.it>

        * Makefile.in: (SHLPRE): Rename from SHLLIBPRE.

2009-05-07  John W. Eaton  <jwe@octave.org>

	* genprops.awk (emit_declarations): Emit decls for static
	has_property functions.
	(emit_source): Add class name argument to base_properties::set
	function.  Pass class name to set_dynamic and
	base_properties::set.  Emit definitions for has_property
	functions.
	* graphics.h.in, graphics.cc
	(base_properties::set, base_properties::set_dynamic):
	New argument CNAME.
	(base_properties::all_dynamic_properties): New static data member.
	(base_properties::has_dynamic_property): New static function.
	(base_graphics_object::set): Pass class name to