@@ -1,3 +1,7 @@
+2009-05-12  Jaroslav Hajek  <highegg@gmail.com>
+
+	* data.cc (F__accumarray_sum__): Optimize the constant range case.
+
 2009-05-11  John W. Eaton  <jwe@octave.org>
 
 	* sparse-xdiv.cc (do_rightdiv_sm_dm, do_leftdiv_dm_sm):
